# pils_control

./: .gitmodules  CHANGELOG.rst  CMakeLists.txt  acker_diff_plugin.xml  package.xml  pils_drive_plugin.xml
doc/: algebra_ackermann.xopp  userdoc.rst
include/acker_diff_controller/: acker_diff_controller.hpp  odometry.hpp  rolling_mean_accumulator.hpp  speed_limiter.hpp  visibility_control.h
include/pils_drive_controller/: odometry.hpp  pils_drive_controller.hpp  rolling_mean_accumulator.hpp  visibility_control.h
scripts/: cmd_vel_to_ackermann.py
src/: acker_diff_controller.cpp  odometry.cpp  pils_drive_controller.cpp  speed_limiter.cpp
test/: test_accumulator.cpp  test_diff_drive_controller.cpp  test_load_diff_drive_controller.cpp
