<?xml version="1.0"?>
<package format="3">
  <name>pilsbot_drive_controller</name>
  <version>0.1.0</version>
  <description>Pilsbot diff drive with steering angle and extra steps</description>
  <maintainer email="accounts@pascalpieper.de">Pascal Pieper</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>

  <build_depend>pluginlib</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
