<?xml version="1.0"?>
<package format="3">
  <name>acker_diff_controller</name>
  <version>0.1.1</version>
  <description>Controller for a differential drive mobile base with back axle</description>
  <maintainer email="info@pascalpieper.de">Pascal Pieper</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>

  <depend>ackermann_msgs</depend>
  <build_depend>pluginlib</build_depend>

  <!-- for cmd vel translation -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <!-- <buildtool_depend>ament_cmake_python</buildtool_depend> -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- rosidl_typesupport_c ? -->

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

